test/libyul/yulSyntaxTests/assignment_of_function.yul
{
    function f() {}
    let x := f
}
// ----
// TypeError 6041: (35-36='f'): Function f used without being called.
